k8s/gateway/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gateway
  namespace: sa-p5
  labels:
    app: gateway
spec:
  selector:
    app: gateway
  type: NodePort
  ports:
    - name: http
      port: 4001         # Puerto interno del servicio
      targetPort: http   # Nombre del puerto en el contenedor
      nodePort: 32001    # Puerto expuesto en los nodos (puedes cambiarlo si está ocupado)
